создала папку images

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <title>Document</title>
 </head>
 <body>
-    
-
+    <header></header>
+    <main></main>
+    <footer></footer>
     <script src="./assets/scripts/index.js"></script>
 </body>
 </html>
