--- a/index.html
+++ b/index.html
@@ -1,18 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/styles/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Roboto:wght@100;300;400;500;700;900&display=swap"
+        rel="stylesheet">
     <title>Document</title>
 </head>
+
 <body>
     <header></header>
-    <main></main>
+    <main class="main">
+        <!--Heroes Gallery-->
+        <article class="gallery">
+            <div class="heroesBox">
+                <button class="heroesBox__btn heroesBox__btn_right"></button>
+                <div class="heroesBox__card"><img src="./assets/images/mainpage/harry.svg">
+                    <p class="galleryText_size">Harry Potter</p>
+                </div>
+                <div class="heroesBox__card"><img src="./assets/images/mainpage/lord.svg">
+                    <p class="galleryText_size">Lord Voldemort</p>
+                </div>
+                <div class="heroesBox__card"><img src="./assets/images/mainpage/hermione.svg">
+                    <p class="galleryText_size">Hermione Granger </p>
+                </div>
+                <div class="heroesBox__card"><img src="./assets/images/mainpage/ron.svg">
+                    <p class="galleryText_size">Ron Weasley</p>
+                </div>
+                <button class="heroesBox__btn heroesBox__btn_left"></button>
+
+            </div>
+        </article>
+        <!--Spells Gallery-->
+    </main>
     <footer></footer>
     <script src="./assets/scripts/index.js"></script>
 </body>
+
 </html>
