добавила заголовок Герои

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
     <title>Document</title>
+
 </head>
 
 <body>
@@ -20,21 +21,23 @@
         <!--Heroes Gallery-->
         <article class="gallery">
             <div class="heroesBox">
-                <button class="heroesBox__btn heroesBox__btn_right"></button>
-                <div class="heroesBox__card"><img src="./assets/images/mainpage/harry.svg">
-                    <p class="galleryText_size">Harry Potter</p>
+                <a class="heroesBox__title" href="" target="_blank">HEROES</a>
+                <div class="heroesBox2">
+                    <button class="heroesBox__btn heroesBox__btn_right"></button>
+                    <div class="heroesBox__card"><img src="./assets/images/mainpage/harry.svg">
+                        <p class="galleryText_size">Harry Potter</p>
+                    </div>
+                    <div class="heroesBox__card"><img src="./assets/images/mainpage/lord.svg">
+                        <p class="galleryText_size">Lord Voldemort</p>
+                    </div>
+                    <div class="heroesBox__card"><img src="./assets/images/mainpage/hermione.svg">
+                        <p class="galleryText_size">Hermione Granger </p>
+                    </div>
+                    <div class="heroesBox__card"><img src="./assets/images/mainpage/ron.svg">
+                        <p class="galleryText_size">Ron Weasley</p>
+                    </div>
+                    <button class="heroesBox__btn heroesBox__btn_left"></button>
                 </div>
-                <div class="heroesBox__card"><img src="./assets/images/mainpage/lord.svg">
-                    <p class="galleryText_size">Lord Voldemort</p>
-                </div>
-                <div class="heroesBox__card"><img src="./assets/images/mainpage/hermione.svg">
-                    <p class="galleryText_size">Hermione Granger </p>
-                </div>
-                <div class="heroesBox__card"><img src="./assets/images/mainpage/ron.svg">
-                    <p class="galleryText_size">Ron Weasley</p>
-                </div>
-                <button class="heroesBox__btn heroesBox__btn_left"></button>
-
             </div>
         </article>
         <!--Spells Gallery-->
