--- a/index.html
+++ b/index.html
@@ -8,28 +8,10 @@
     <link rel="stylesheet" href="./assets/styles/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Roboto:wght@100;300;400;500;700;900&display=swap"
+        rel="stylesheet">
     <title>Document</title>
-    <style>
-        .button {
-            box-shadow: 0 3px 4px 0 rgba(0, 0, 0, .3);
-            display: inline-block;
-            vertical-align: middle;
-            box-sizing: border-box;
-            background-color: transparent;
-            border: 1px solid hsla(0, 0%, 100%, .5);
-            border-radius: 100px;
-            cursor: pointer;
-            position: relative;
-            z-index: 100;
-            background: url('../../images/mainpage/arrayRight.svg');
-        }
-
-        .button:hover {
-            background-image: linear-gradient(160deg, #44cbd4, #2881ef);
-        }
-    </style>
-</head>
 
 <body>
     <header></header>
@@ -42,7 +24,7 @@
                 </div>
             </div>
         </article>
-        <button class="button">hi</button>
+
         <!--Spells Gallery-->
 
         <!--Comments -->
@@ -60,7 +42,6 @@
                 <button type="submit" class="">Add comment</button>
             </div>
             <div class="">
-
             </div>
         </div>
     </main>
