--- a/index.html
+++ b/index.html
@@ -8,45 +8,44 @@
     <link rel="stylesheet" href="./assets/styles/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Roboto:wght@100;300;400;500;700;900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <title>Document</title>
 
-<body>
-    <header></header>
-    <main class="main">
-        <!--Heroes Gallery-->
-        <article class="gallery">
-            <div class="heroesBox">
-                <a class="heroesBox__title" href="" target="_blank">HEROES</a>
-                <div class="heroesBox2">
+    <body>
+        <header></header>
+        <main class="main">
+            <!--Heroes Gallery-->
+            <article class="gallery">
+                <div class="heroesBox">
+                    <a class="heroesBox__title" href="" target="_blank">HEROES</a>
+                    <div class="heroesBox2">
+                    </div>
                 </div>
-            </div>
-        </article>
+            </article>
 
-        <!--Spells Gallery-->
+            <!--Spells Gallery-->
 
-        <!--Comments -->
-        <div class="comments">
-            <h2>COMMENTS</h2>
-            <div class="comments__form">
-                <form>
-                    <div class="form-group">
-                        <input type="name" class="form-control" id="comment-name" placeholder="Your name:">
+            <!--Comments -->
+            <article class="comments">
+                <div class="comments__block">
+                    <a class="heroesBox__title comments__title" href="" target="_blank">COMMENTS</a>
+                    <div class="comments__form">
+                        <form>
+                            <div class="form-group">
+                                <input type="name" class="form-control" id="comment-name" placeholder="Your name:">
+                            </div>
+                            <div class="form-group">
+                                <input type="name" class="form-control" id="comment-body" placeholder="Comment:">
+                            </div>
+                        </form>
+                        <button type="submit" class="">Add comment</button>
                     </div>
-                    <div class="form-group">
-                        <input type="name" class="form-control" id="comment-body" placeholder="Comment:">
-                    </div>
-                </form>
-                <button type="submit" class="">Add comment</button>
-            </div>
-            <div class="">
-            </div>
-        </div>
-    </main>
-    <footer></footer>
-    <script src="./assets/scripts/index.js"></script>
-</body>
+                    <div class=""></div>
+                </div>
+            </article>
+        </main>
+        <footer></footer>
+        <script src="./assets/scripts/index.js"></script>
+    </body>
 
 </html>
