--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             z-index: 100;
             background: url('../../images/mainpage/arrayRight.svg');
         }
-
+        
         .button:hover {
             background-image: linear-gradient(160deg, #44cbd4, #2881ef);
         }
@@ -46,23 +46,26 @@
         <!--Spells Gallery-->
 
         <!--Comments -->
-        <div class="comments">
-            <h2>COMMENTS</h2>
-            <div class="comments__form">
-                <form>
-                    <div class="form-group">
-                        <input type="name" class="form-control" id="comment-name" placeholder="Your name:">
+        <article class="comments">
+            <div class="commentsBox">
+                <a class="heroesBox__title commentsBox__title" href="" target="_blank">COMMENTS</a>
+                <div class="comments__block">
+                    <div class="comments__form">
+                        <form>
+                            <div class="form-group">
+                                <input type="name" class="form-control" id="comment-name" placeholder="Your name:">
+                            </div>
+                            <div class="form-group">
+                                <input type="name" class="form-control" id="comment-body" placeholder="Comment:">
+                            </div>
+                        </form>
+                        <button type="submit" class="">Add comment</button>
                     </div>
-                    <div class="form-group">
-                        <input type="name" class="form-control" id="comment-body" placeholder="Comment:">
-                    </div>
-                </form>
-                <button type="submit" class="">Add comment</button>
+                    <div class=""></div>
+                </div>
             </div>
-            <div class="">
+        </article>
 
-            </div>
-        </div>
     </main>
     <footer></footer>
     <script src="./assets/scripts/index.js"></script>
