--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                     <div class="comments__form">
                         <form>
                             <div class="form-group">
-                                <input type="name" class="form-control" id="comment-name" placeholder="Your name:">
+                                <input type="name" class="form-control form-name" id="comment-name" placeholder="Your name:">
                             </div>
                             <div class="form-group">
-                                <input type="name" class="form-control" id="comment-body" placeholder="Comment:">
+                                <input type="name" class="form-control form-comment" id="comment-body" placeholder="Comment:">
                             </div>
                         </form>
                         <button type="submit" class="">Add comment</button>
