--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                 <input type="name" class="form-control form-comment" id="comment-body" placeholder="Comment:">
                             </div>
                         </form>
-                        <button type="submit" class="">Add comment</button>
+                        <button type="submit" class="comments__button">Add comment</button>
                     </div>
                     <div class=""></div>
                 </div>
