--- a/index.html
+++ b/index.html
@@ -32,7 +32,23 @@
 </head>
 
 <body>
-    <header></header>
+    <header class="header">
+        <div class="header__container">
+            <div class="header__logo"><a href="./index.html"><img src="./assets/images/header/image 26.png" alt="logo"></a>
+            </div>
+            <nav class="header__menu">
+                <ul class="header__list">
+                    <li><a href="#" class="header__link">MAIN</a></li>
+                    <li><a href="#" class="header__link">HEROES</a></li>
+                    <li><a href="#" class="header__link">SPELLS</a></li>
+                    <li><a href="#" class="header__link">COMMENTS</a></li>
+                </ul>
+            </nav>
+            <div class="header__login">
+                <a href="#">SIGN IN</a>
+            </div>
+        </div>
+    </header>
     <main class="main">
             <article class="mainpage">
                 <div class="mainpage__container">
