--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="./assets/styles/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Roboto:wght@100;300;400;500;700;900&display=swap"
+        rel="stylesheet">
     <title>Document</title>
     <style>
         .button {
@@ -24,20 +26,20 @@
             z-index: 100;
             background: url('../../images/mainpage/arrayRight.svg');
         }
-        
+
         .button:hover {
             background-image: linear-gradient(160deg, #44cbd4, #2881ef);
         }
 
         /*стили карточки героя и карточки заклинания, позже удалятся*/
-        .hero{
+        .hero {
 
-            margin:auto;
+            margin: auto;
             width: 450px;
             height: 600px;
             background-image: url('./assets/images/card/bigfon.png');
             background-size: 100%;
-           background-position: center;
+            background-position: center;
             background-repeat: no-repeat;
             border-radius: 40px;
         }
@@ -47,7 +49,8 @@
 <body>
     <header class="header">
         <div class="header__container">
-            <div class="header__logo"><a href="./index.html"><img src="./assets/images/header/image 26.png" alt="logo"></a>
+            <div class="header__logo"><a href="./index.html"><img src="./assets/images/header/image 26.png"
+                        alt="logo"></a>
             </div>
             <nav class="header__menu">
                 <ul class="header__list">
@@ -63,19 +66,23 @@
         </div>
     </header>
     <main class="main">
-            <article class="mainpage">
-                <div class="mainpage__container">
-                    <div class="mainpage__container__logodiv"><img class="mainpage__container__logo" src="./assets/images/mainpage/logo.png" alt="logo"></div>
-                    <p class="mainpage__container__text1">Hello! You got into Harry Potter Wiki!</p>
-                    
-                    <div class="mainpage__container__container2"><p class="mainpage__container__text2">Here you can find information about your favorite heroes and spells of the Harry Potter universe</p>
+        <article class="mainpage">
+            <div class="mainpage__container">
+                <div class="mainpage__container__logodiv"><img class="mainpage__container__logo"
+                        src="./assets/images/mainpage/logo.png" alt="logo"></div>
+                <p class="mainpage__container__text1">Hello! You got into Harry Potter Wiki!</p>
+
+                <div class="mainpage__container__container2">
+                    <p class="mainpage__container__text2">Here you can find information about your favorite heroes and
+                        spells of the Harry Potter universe</p>
                     <button class="mainpage__container__button button_fontsize">Search</button>
                     <div class="mainpage__container__search">
-                    <input type="text" class="mainpage__container__input" placeholder="Name of character">
-                <img src="./assets/images/mainpage/Shape.png" class="mainpage__container__image"></div>
+                        <input type="text" class="mainpage__container__input" placeholder="Name of character">
+                        <img src="./assets/images/mainpage/Shape.png" class="mainpage__container__image">
                     </div>
                 </div>
-            </article>
+            </div>
+        </article>
         <!--Heroes Gallery-->
         <article class="gallery">
             <div class="heroesBox">
@@ -95,10 +102,12 @@
                     <div class="comments__form">
                         <form>
                             <div class="form-group">
-                                <input type="name" class="form-control form-name" id="comment-name" placeholder="Your name:">
+                                <input type="name" class="form-control form-name" id="comment-name"
+                                    placeholder="Your name:">
                             </div>
                             <div class="form-group">
-                                <input type="name" class="form-control form-comment" id="comment-body" placeholder="Comment:">
+                                <input type="name" class="form-control form-comment" id="comment-body"
+                                    placeholder="Comment:">
                             </div>
                         </form>
                         <button type="submit" class="comments__button">Add comment</button>
@@ -109,10 +118,30 @@
         </article>
 
     </main>
-    <footer></footer>
+    <footer class="footer">
+        <div class="footer__container">
+            <div class="footer__col-l">
+                <div class="footer__logo">
+                    <a href=""><img src="./assets/images/footer/image 42.png" alt="HP-logo"></a>
+                </div>
+                <div class="footer__menu">
+                    <ul class="footer__list">
+                        <li><a href="#" class="footer__link">Main</a></li>
+                        <li><a href="#" class="footer__link">Heroes</a></li>
+                        <li><a href="#" class="footer__link">Spells</a></li>
+                        <li><a href="#" class="footer__link">Comments</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer__social">
+                <a href="#"><img src="./assets/images/footer/image 41.png" alt="inst"></a>
+                <a href="#"><img src="./assets/images/footer/image 40.png" alt="whatsapp"></a>
+            </div>
+        </div>
+    </footer>
     <div class="hero">
         <div class="hero__container">
-            <img src="" alt="image of hero"  class="hero__container__img">
+            <img src="" alt="image of hero" class="hero__container__img">
             <div class="hero__container__div1">Name: <span>Harry Potter</span></div>
             <div class="hero__container__div2">Species: <span>human, wizard</span></div>
             <div class="hero__container__div3">Gender: <span>male</span></div>
