--- a/index.html
+++ b/index.html
@@ -93,6 +93,39 @@
         </article>
         <button class="button">hi</button>
         <!--Spells Gallery-->
+        <article class="spellsGallery">
+            <img src="./assets/images/spells/magicStick.png" class="spellsGallery_magicStick">
+            <wrapper class="spellsGallery_wrapper">
+                <div class="h2">SPELLS</div>
+                
+                <div class="spellsGallery_wrapper_cards">
+                <div class="spells_icon_left">
+                    <img src="./assets/images/mainpage/arrayRight.svg" class="spells_icon_left_pic">
+                </div>
+
+                <div class="spellCard">
+                    <img src="./assets/images/spells/alberto.png" class="spellCard_picture">
+                    <div class="spellCard_text"><a href="#">Aberto</a></div>
+                </div>
+
+                <div class="spellCard">
+                    <img src="./assets/images/spells/accio.png" class="spellCard_picture">
+                    <div class="spellCard_text"><a href="#">Accio</a></div>
+                </div>
+
+                <div class="spellCard">
+                    <img src="./assets/images/spells/aguamenti.png" class="spellCard_picture">
+                    <div class="spellCard_text"><a href="#">Aguamenti</a></div>
+                </div>
+
+                <div class="spells_icon_right">
+                    <img src="./assets/images/mainpage/arrayLeft.svg" class="spells_icon_right_pic">
+                </div>
+
+                </div>
+            </div>
+            </wrapper>
+        </article>
 
         <!--Comments -->
         <article class="comments">
