добавила правую часть блока

--- a/index.html
+++ b/index.html
@@ -34,19 +34,20 @@
 <body>
     <header></header>
     <main class="main">
-            <article class="mainpage">
-                <div class="mainpage__container">
-                    <div class="mainpage__container__logodiv"><img class="mainpage__container__logo" src="./assets/images/mainpage/logo.png" alt="логотип"></div>
-                    <p class="mainpage__container__text1">Hello! You got into Harry Potter Wiki!</p>
-                    
-                    <div class="mainpage__container__container2"><p class="mainpage__container__text2">Here you can find information about your favorite heroes and spells of the Harry Potter universe</p>
+        <article class="mainpage">
+            <div class="mainpage__container">
+                <div class="mainpage__container__logodiv"><img class="mainpage__container__logo" src="./assets/images/mainpage/logo.png" alt="логотип"></div>
+                <p class="mainpage__container__text1">Hello! You got into Harry Potter Wiki!</p>
+
+                <div class="mainpage__container__container2">
+                    <p class="mainpage__container__text2">Here you can find information about your favorite heroes and spells of the Harry Potter universe</p>
                     <button class="mainpage__container__button button_fontsize">Search</button>
                     <div class="search">
-                    <input type="text" class="mainpage__container__input" placeholder="Name of character">
-                <img src="./assets/images/mainpage/Shape.png" class="mainpage__container__image"></div>
-                    </div>
+                        <input type="text" class="mainpage__container__input" placeholder="Name of character">
+                        <img src="./assets/images/mainpage/Shape.png" class="mainpage__container__image"></div>
                 </div>
-            </article>
+            </div>
+        </article>
         <!--Heroes Gallery-->
         <article class="gallery">
             <div class="heroesBox">
@@ -74,7 +75,12 @@
                         </form>
                         <button type="submit" class="comments__button">Add comment</button>
                     </div>
-                    <div class=""></div>
+                    <div class="comments__result">
+                        <div class="comments__result-item">a</div>
+                        <div class="comments__result-item">a</div>
+                        <div class="comments__result-item">a</div>
+                        <div class="comments__result-item">a</div>
+                    </div>
                 </div>
             </div>
         </article>
