--- a/index.html
+++ b/index.html
@@ -229,10 +229,18 @@
                         <button type="submit" class="comments__button">Add comment</button>
                     </div>
                     <div class="comments__result">
-                        <div class="comments__result-item">a</div>
-                        <div class="comments__result-item">a</div>
-                        <div class="comments__result-item">a</div>
-                        <div class="comments__result-item">a</div>
+                        <div class="comments__result-item">
+                            <img class="comments__photo" src="./assets/images/mainpage/mini_ava.svg" alt="photo">
+                        </div>
+                        <div class="comments__result-item">
+                            <img class="comments__photo" src="./assets/images/mainpage/mini_photo.svg" alt="photo">
+                        </div>
+                        <div class="comments__result-item">
+                            <img class="comments__photo" src="./assets/images/mainpage/mini_ava.svg" alt="photo">
+                        </div>
+                        <div class="comments__result-item">
+                            <img class="comments__photo" src="./assets/images/mainpage/mini_ava.svg" alt="photo">
+                        </div>
                     </div>
                 </div>
             </div>
