--- a/index.html
+++ b/index.html
@@ -231,15 +231,19 @@
                     <div class="comments__result">
                         <div class="comments__result-item">
                             <img class="comments__photo" src="./assets/images/mainpage/mini_ava.svg" alt="photo">
+                            <p class="comments__name">Катя:</p>
                         </div>
                         <div class="comments__result-item">
                             <img class="comments__photo" src="./assets/images/mainpage/mini_photo.svg" alt="photo">
+                            <p class="comments__name">Катя:</p>
                         </div>
                         <div class="comments__result-item">
                             <img class="comments__photo" src="./assets/images/mainpage/mini_ava.svg" alt="photo">
+                            <p class="comments__name">Катя:</p>
                         </div>
                         <div class="comments__result-item">
                             <img class="comments__photo" src="./assets/images/mainpage/mini_ava.svg" alt="photo">
+                            <p class="comments__name">Катя:</p>
                         </div>
                     </div>
                 </div>
