добавила дату в комментарии

--- a/index.html
+++ b/index.html
@@ -232,18 +232,26 @@
                         <div class="comments__result-item">
                             <img class="comments__photo" src="./assets/images/mainpage/mini_ava.svg" alt="photo">
                             <p class="comments__name">Катя:</p>
+                            <p class="comments__content">Крутой сайт!</p>
+                            <p class="comments__time">06.01.2023</p>
                         </div>
                         <div class="comments__result-item">
                             <img class="comments__photo" src="./assets/images/mainpage/mini_photo.svg" alt="photo">
                             <p class="comments__name">Катя:</p>
+                            <p class="comments__content">Крутой сайт!</p>
+                            <p class="comments__time">06.01.2023</p>
                         </div>
                         <div class="comments__result-item">
                             <img class="comments__photo" src="./assets/images/mainpage/mini_ava.svg" alt="photo">
                             <p class="comments__name">Катя:</p>
+                            <p class="comments__content">Крутой сайт!</p>
+                            <p class="comments__time">06.01.2023</p>
                         </div>
                         <div class="comments__result-item">
                             <img class="comments__photo" src="./assets/images/mainpage/mini_ava.svg" alt="photo">
                             <p class="comments__name">Катя:</p>
+                            <p class="comments__content">Крутой сайт!</p>
+                            <p class="comments__time">06.01.2023</p>
                         </div>
                     </div>
                 </div>
