--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <div class="mainpage__container__container2">
                     <p class="mainpage__container__text2">Here you can find information about your favorite heroes and spells of the Harry Potter universe</p>
                     <button class="mainpage__container__button button_fontsize">Search</button>
-                    <div class="search">
+                    <div class="mainpage__container__search">
                         <input type="text" class="mainpage__container__input" placeholder="Name of character">
                         <img src="./assets/images/mainpage/Shape.png" class="mainpage__container__image"></div>
                 </div>
