--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                                 <input type="name" class="form-control form-comment" id="comment-body" placeholder="Comment:">
                             </div>
                         </form>
-                        <button type="submit" class="comments__button">Add comment</button>
+                        <button type="submit" class="comments__button button__shine">Add comment</button>
                     </div>
                     <div class="comments__result">
                         <div class="comments__result-item">
