поиск по массиву героев

--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
 
                 <div class="mainpage__container__container2">
                     <p class="mainpage__container__text2">Here you can find information about your favorite heroes and spells of the Harry Potter universe</p>
-                    <button class="mainpage__container__button button_fontsize button__shine">Search</button>
+                    <button class="mainpage__container__button button_fontsize button__shine" onclick="heroSearch()">Search</button>
                     <div class="mainpage__container__search">
-                        <input type="text" class="mainpage__container__input" placeholder="Name of character"></div>
+                        <input type="text" class="mainpage__container__input" placeholder="Name of character" id="hero"></div>
                 </div>
             </div>
         </article>
@@ -307,6 +307,7 @@
         <button class="spell-card__container__button">Close</button>
     </div>
     <script src="./assets/scripts/index.js"></script>
+    <script src="./assets/scripts/search.js"></script>
 </body>
 
 </html>
