--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <!--Heroes Gallery-->
         <article class="gallery">
             <div class="heroesBox">
-                <a class="title_size" href="" target="_blank">HEROES</a>
+                <h2 class="title_size" href="" target="_blank">HEROES</h2>
                 <div class="heroesBox2">
                 </div>
             </div>
@@ -189,23 +189,23 @@
             <wrapper class="spellsGallery_wrapper">
                 <div class="h2">SPELLS</div>
 
-                <div class="spellsGallery_wrapper_cards">
+                <div class="spellsGallery_wrapper_cards ">
                     <div class="spells_icon_left">
                         <img src="./assets/images/mainpage/arrayRight.svg" class="spells_icon_left_pic">
                     </div>
 
                     <div class="spellCard">
-                        <img src="./assets/images/spells/alberto.png" class="spellCard_picture">
+                        <img src="./assets/images/spells/alberto.png" class="spellCard_picture imgHover ">
                         <div class="spellCard_text"><a href="#">Aberto</a></div>
                     </div>
 
                     <div class="spellCard">
-                        <img src="./assets/images/spells/accio.png" class="spellCard_picture">
+                        <img src="./assets/images/spells/accio.png" class="spellCard_picture imgHover ">
                         <div class="spellCard_text"><a href="#">Accio</a></div>
                     </div>
 
                     <div class="spellCard">
-                        <img src="./assets/images/spells/aguamenti.png" class="spellCard_picture">
+                        <img src="./assets/images/spells/aguamenti.png" class="spellCard_picture imgHover ">
                         <div class="spellCard_text"><a href="#">Aguamenti</a></div>
                     </div>
 
