--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <!--Heroes Gallery-->
         <article class="gallery">
             <div class="heroesBox">
-                <h2 class="title_size" href="" target="_blank">HEROES</h2>
+                <h2 class="title_size padding" href="" target="_blank">HEROES</h2>
                 <div class="heroesBox2">
                 </div>
             </div>
