попытки сделать слайдер

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
+
     <title>Document</title>
     <style>
         .button {
@@ -177,10 +178,11 @@
         <!--Heroes Gallery-->
         <article class="gallery">
             <div class="heroesBox">
-                <h2 class="title_size padding" href="" target="_blank">HEROES</h2>
+                <h2 class="title_size padding">HEROES</h2>
                 <div class="heroesBox2">
                 </div>
             </div>
+
         </article>
         <!--Spells Gallery-->
         <article class="spellsGallery">
@@ -316,8 +318,10 @@
         </div>
         <button class="spell-card__container__button">Close</button>
     </div>
+
     <script src="./assets/scripts/index.js"></script>
     <script src="./assets/scripts/search.js"></script>
+    <script src="./assets/scripts/swiper.js" defer></script>
 </body>
 
 </html>
