--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-
+    <script src="./assets/scripts/modal.js"></script>
     <title>Document</title>
     <style>
         .button {
@@ -312,6 +312,7 @@
     <script src="./assets/scripts/index.js"></script>
     <script src="./assets/scripts/search.js"></script>
     <script src="./assets/scripts/swiper.js" defer></script>
+
 </body>
 
 </html>
