анимация у слайдера на js

--- a/index.html
+++ b/index.html
@@ -183,20 +183,20 @@
             <h2 class="title_size padding">HEROES</h2>
             <div class="slider ">
                 <div class="slider__item"><img src="./assets/images/mainpage/harry.svg" class="imgHover" alt="Harry">
-                    <p class="galleryText_size">Harry Potter</p>
+                    <a class="galleryText_size">Harry Potter</a>
                 </div>
                 <div class="slider__item"><img src="./assets/images/mainpage/lord.svg" class="imgHover" alt="Lord">
-                    <p class="galleryText_size">Lord Voldemort</p>
+                    <a class="galleryText_size">Lord Voldemort</a>
                 </div>
                 <div class="slider__item"><img src="./assets/images/mainpage/hermione.svg" class="imgHover"
                         alt="Hermione">
-                    <p class="galleryText_size">Hermione</p>
+                    <a class="galleryText_size">Hermione</a>
                 </div>
-                <div class="slider__item"><img src="./assets/images/mainpage/ron.svg" class="imgHover" alt="Ron">
-                    <p class="galleryText_size">Ron Weasley</p>
+                <div class="slider__item"><img src="./assets/images/mainpage/lord.svg" class="imgHover" alt="Lord">
+                    <a class="galleryText_size">Lord Voldemort</a>
                 </div>
-                <div class="slider__item"><img src="./assets/images/mainpage/ron.svg" class="imgHover" alt="Ron">
-                    <p class="galleryText_size">Ron Weasley</p>
+                <div class="slider__item"><img src="./assets/images/mainpage/lord.svg" class="imgHover" alt="Lord">
+                    <a class="galleryText_size">Lord Voldemort</a>
                 </div>
             </div>
         </div>
