поправила первый экран

--- a/index.html
+++ b/index.html
@@ -170,16 +170,15 @@
                 <div class="mainpage__container__logodiv"><img class="mainpage__container__logo"
                         src="./assets/images/mainpage/logo.png" alt="логотип"></div>
                 <p class="mainpage__container__text1">Hello! You got into Harry Potter Wiki!</p>
-
-                <div class="mainpage__container__container2">
                     <p class="mainpage__container__text2">Here you can find information about your favorite heroes and
                         spells of the Harry Potter universe</p>
-                    <button class="mainpage__container__button button_fontsize button__shine"
-                        onclick="heroSearch()">Search</button>
+                        <div class="mainpage__container2">
                     <div class="mainpage__container__search">
                         <input type="text" class="mainpage__container__input" placeholder="Name of character" id="hero">
                     </div>
-                </div>
+                    <button class="mainpage__container__button button_fontsize button__shine"
+                    onclick="heroSearch()">Search</button></div>
+                
             </div>
         </article>
         <!--Heroes Gallery-->
