поправила фон и отступы у spells

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
         <!--Wrapper-->
         <div class="wrapper heroesBox">
-            <h2 class="title_size padding">HEROES</h2>
+            <h2 class="title_size">HEROES</h2>
             <div class="slider ">
                 <div class="slider__item" data-tooltip="Harry Potter"><img src="./assets/images/mainpage/harry.svg"
                         class="imgHover" alt="Harry">
@@ -216,9 +216,8 @@
         </div>
         <!--Spells Gallery-->
         <article class="spellsGallery">
-            <img src="./assets/images/spells/magicStick.png" class="spellsGallery_magicStick">
             <wrapper class="spellsGallery_wrapper">
-                <h2 class="title_size padding">SPELLS</h2>
+                <h2 class="title_size">SPELLS</h2>
                 <div class="spellsGallery_wrapper_cards ">
                     <div class="spells_icon_left">
                         <img src="./assets/images/mainpage/arrayRight.svg" class="spells_icon_left_pic  ">
